build(deps): update dep versions
- Add coroutine dep
- remove illegal-access permit (not required atm)