@@ -45,7 +45,7 @@
 		<groovy.version>2.5.14</groovy.version>
 
 		<kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
-		<kotlin.version>1.4.21</kotlin.version>
+		<kotlin.version>1.6.0</kotlin.version>
 
 		<package-name>org.janelia.saalfeldlab.paintera</package-name>
 
@@ -66,7 +66,7 @@
 		<janino.version>2.6.1</janino.version>
 
 		<!-- JavaFx Version-->
-		<javafx.version>16</javafx.version>
+		<javafx.version>18.0.1</javafx.version>
 
 		<n5.version>2.5.0</n5.version>
 		<n5-hdf5.version>1.3.0</n5-hdf5.version>
@@ -76,6 +76,7 @@
 		<n5-zarr.version>0.0.6</n5-zarr.version>
 		<alphanumeric-comparator.version>1.4.1</alphanumeric-comparator.version>
 		<dokka.version>1.4.30</dokka.version>
+		<jna.version>5.11.0</jna.version>
 		<!--<enforcer.skip>true</enforcer.skip>-->
 	</properties>
 
@@ -543,6 +544,12 @@
 			<artifactId>richtextfx</artifactId>
 			<version>0.10.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-core</artifactId>
+			<version>${kotlin.version}</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<developers>
@@ -921,7 +928,6 @@
 						<configuration>
 							<mainClass>org.janelia.saalfeldlab.paintera.Paintera</mainClass>
 							<options>
-								<option>--illegal-access=permit</option>
 								<option>--add-opens=javafx.base/javafx.util=ALL-UNNAMED</option>
 								<option>--add-opens=javafx.base/javafx.event=ALL-UNNAMED</option>
 								<option>--add-opens=javafx.base/javafx.beans.property=ALL-UNNAMED</option>
@@ -961,7 +967,6 @@
 							<options>
 								<option>-Dglass.disableGrab=true</option>
 								<option>-agentlib:jdwp=transport=dt_socket,server=n,address=localhost:5005,suspend=y</option>
-								<option>--illegal-access=permit</option>
 								<option>--add-opens=javafx.base/javafx.util=ALL-UNNAMED</option>
 								<option>--add-opens=javafx.base/javafx.event=ALL-UNNAMED</option>
 								<option>--add-opens=javafx.base/javafx.beans.property=ALL-UNNAMED</option>
